--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@ function signincallback(authResult) {
                 if (result) {
                     console.log('5');
                     $('#result').html('Login Successful!</br>' + result + '</br>Redirecting...')
-                    setTimeout(Function() {
+                    setTimeout(function() {
                         window.location.href= "/category";
                         }, 4000);
 
